--- a/storybook-static/iframe.html
+++ b/storybook-static/iframe.html
@@ -394,7 +394,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-C72VGpI1.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-BSGB4nNe.js"></script>
   </head>
 
   <body>
